// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing functions that retrieve data from an Odata source Function that retrieves entity-data as JSON from a given Odata source entity-url 1`] = `
Object {
  "data": Array [
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(1)/Category",
        },
      },
      "CategoryID": 1,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(1)/Order_Details",
        },
      },
      "ProductID": 1,
      "ProductName": "Chai",
      "QuantityPerUnit": "10 boxes x 20 bags",
      "ReorderLevel": 10,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(1)/Supplier",
        },
      },
      "SupplierID": 1,
      "UnitPrice": "18.0000",
      "UnitsInStock": 39,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(1)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(2)/Category",
        },
      },
      "CategoryID": 1,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(2)/Order_Details",
        },
      },
      "ProductID": 2,
      "ProductName": "Chang",
      "QuantityPerUnit": "24 - 12 oz bottles",
      "ReorderLevel": 25,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(2)/Supplier",
        },
      },
      "SupplierID": 1,
      "UnitPrice": "19.0000",
      "UnitsInStock": 17,
      "UnitsOnOrder": 40,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(2)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(3)/Category",
        },
      },
      "CategoryID": 2,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(3)/Order_Details",
        },
      },
      "ProductID": 3,
      "ProductName": "Aniseed Syrup",
      "QuantityPerUnit": "12 - 550 ml bottles",
      "ReorderLevel": 25,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(3)/Supplier",
        },
      },
      "SupplierID": 1,
      "UnitPrice": "10.0000",
      "UnitsInStock": 13,
      "UnitsOnOrder": 70,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(3)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(4)/Category",
        },
      },
      "CategoryID": 2,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(4)/Order_Details",
        },
      },
      "ProductID": 4,
      "ProductName": "Chef Anton's Cajun Seasoning",
      "QuantityPerUnit": "48 - 6 oz jars",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(4)/Supplier",
        },
      },
      "SupplierID": 2,
      "UnitPrice": "22.0000",
      "UnitsInStock": 53,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(4)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(5)/Category",
        },
      },
      "CategoryID": 2,
      "Discontinued": true,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(5)/Order_Details",
        },
      },
      "ProductID": 5,
      "ProductName": "Chef Anton's Gumbo Mix",
      "QuantityPerUnit": "36 boxes",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(5)/Supplier",
        },
      },
      "SupplierID": 2,
      "UnitPrice": "21.3500",
      "UnitsInStock": 0,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(5)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(6)/Category",
        },
      },
      "CategoryID": 2,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(6)/Order_Details",
        },
      },
      "ProductID": 6,
      "ProductName": "Grandma's Boysenberry Spread",
      "QuantityPerUnit": "12 - 8 oz jars",
      "ReorderLevel": 25,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(6)/Supplier",
        },
      },
      "SupplierID": 3,
      "UnitPrice": "25.0000",
      "UnitsInStock": 120,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(6)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(7)/Category",
        },
      },
      "CategoryID": 7,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(7)/Order_Details",
        },
      },
      "ProductID": 7,
      "ProductName": "Uncle Bob's Organic Dried Pears",
      "QuantityPerUnit": "12 - 1 lb pkgs.",
      "ReorderLevel": 10,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(7)/Supplier",
        },
      },
      "SupplierID": 3,
      "UnitPrice": "30.0000",
      "UnitsInStock": 15,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(7)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(8)/Category",
        },
      },
      "CategoryID": 2,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(8)/Order_Details",
        },
      },
      "ProductID": 8,
      "ProductName": "Northwoods Cranberry Sauce",
      "QuantityPerUnit": "12 - 12 oz jars",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(8)/Supplier",
        },
      },
      "SupplierID": 3,
      "UnitPrice": "40.0000",
      "UnitsInStock": 6,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(8)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(9)/Category",
        },
      },
      "CategoryID": 6,
      "Discontinued": true,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(9)/Order_Details",
        },
      },
      "ProductID": 9,
      "ProductName": "Mishi Kobe Niku",
      "QuantityPerUnit": "18 - 500 g pkgs.",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(9)/Supplier",
        },
      },
      "SupplierID": 4,
      "UnitPrice": "97.0000",
      "UnitsInStock": 29,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(9)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(10)/Category",
        },
      },
      "CategoryID": 8,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(10)/Order_Details",
        },
      },
      "ProductID": 10,
      "ProductName": "Ikura",
      "QuantityPerUnit": "12 - 200 ml jars",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(10)/Supplier",
        },
      },
      "SupplierID": 4,
      "UnitPrice": "31.0000",
      "UnitsInStock": 31,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(10)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(11)/Category",
        },
      },
      "CategoryID": 4,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(11)/Order_Details",
        },
      },
      "ProductID": 11,
      "ProductName": "Queso Cabrales",
      "QuantityPerUnit": "1 kg pkg.",
      "ReorderLevel": 30,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(11)/Supplier",
        },
      },
      "SupplierID": 5,
      "UnitPrice": "21.0000",
      "UnitsInStock": 22,
      "UnitsOnOrder": 30,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(11)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(12)/Category",
        },
      },
      "CategoryID": 4,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(12)/Order_Details",
        },
      },
      "ProductID": 12,
      "ProductName": "Queso Manchego La Pastora",
      "QuantityPerUnit": "10 - 500 g pkgs.",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(12)/Supplier",
        },
      },
      "SupplierID": 5,
      "UnitPrice": "38.0000",
      "UnitsInStock": 86,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(12)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(13)/Category",
        },
      },
      "CategoryID": 8,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(13)/Order_Details",
        },
      },
      "ProductID": 13,
      "ProductName": "Konbu",
      "QuantityPerUnit": "2 kg box",
      "ReorderLevel": 5,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(13)/Supplier",
        },
      },
      "SupplierID": 6,
      "UnitPrice": "6.0000",
      "UnitsInStock": 24,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(13)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(14)/Category",
        },
      },
      "CategoryID": 7,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(14)/Order_Details",
        },
      },
      "ProductID": 14,
      "ProductName": "Tofu",
      "QuantityPerUnit": "40 - 100 g pkgs.",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(14)/Supplier",
        },
      },
      "SupplierID": 6,
      "UnitPrice": "23.2500",
      "UnitsInStock": 35,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(14)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(15)/Category",
        },
      },
      "CategoryID": 2,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(15)/Order_Details",
        },
      },
      "ProductID": 15,
      "ProductName": "Genen Shouyu",
      "QuantityPerUnit": "24 - 250 ml bottles",
      "ReorderLevel": 5,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(15)/Supplier",
        },
      },
      "SupplierID": 6,
      "UnitPrice": "15.5000",
      "UnitsInStock": 39,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(15)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(16)/Category",
        },
      },
      "CategoryID": 3,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(16)/Order_Details",
        },
      },
      "ProductID": 16,
      "ProductName": "Pavlova",
      "QuantityPerUnit": "32 - 500 g boxes",
      "ReorderLevel": 10,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(16)/Supplier",
        },
      },
      "SupplierID": 7,
      "UnitPrice": "17.4500",
      "UnitsInStock": 29,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(16)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(17)/Category",
        },
      },
      "CategoryID": 6,
      "Discontinued": true,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(17)/Order_Details",
        },
      },
      "ProductID": 17,
      "ProductName": "Alice Mutton",
      "QuantityPerUnit": "20 - 1 kg tins",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(17)/Supplier",
        },
      },
      "SupplierID": 7,
      "UnitPrice": "39.0000",
      "UnitsInStock": 0,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(17)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(18)/Category",
        },
      },
      "CategoryID": 8,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(18)/Order_Details",
        },
      },
      "ProductID": 18,
      "ProductName": "Carnarvon Tigers",
      "QuantityPerUnit": "16 kg pkg.",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(18)/Supplier",
        },
      },
      "SupplierID": 7,
      "UnitPrice": "62.5000",
      "UnitsInStock": 42,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(18)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(19)/Category",
        },
      },
      "CategoryID": 3,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(19)/Order_Details",
        },
      },
      "ProductID": 19,
      "ProductName": "Teatime Chocolate Biscuits",
      "QuantityPerUnit": "10 boxes x 12 pieces",
      "ReorderLevel": 5,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(19)/Supplier",
        },
      },
      "SupplierID": 8,
      "UnitPrice": "9.2000",
      "UnitsInStock": 25,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(19)",
      },
    },
    Object {
      "Category": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(20)/Category",
        },
      },
      "CategoryID": 3,
      "Discontinued": false,
      "Order_Details": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(20)/Order_Details",
        },
      },
      "ProductID": 20,
      "ProductName": "Sir Rodney's Marmalade",
      "QuantityPerUnit": "30 gift boxes",
      "ReorderLevel": 0,
      "Supplier": Object {
        "__deferred": Object {
          "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(20)/Supplier",
        },
      },
      "SupplierID": 8,
      "UnitPrice": "81.0000",
      "UnitsInStock": 40,
      "UnitsOnOrder": 0,
      "__metadata": Object {
        "type": "NorthwindModel.Product",
        "uri": "https://services.odata.org/V2/Northwind/Northwind.svc/Products(20)",
      },
    },
  ],
  "entity": "Products",
  "source": "https://services.odata.org/V2/Northwind/Northwind.svc",
}
`;

exports[`Testing functions that retrieve data from an Odata source Function that retrieves the entity list as JSON from a given Data Source 1`] = `
Object {
  "entityList": Object {
    "Alphabetical_list_of_product": Array [
      "ProductID",
      "ProductName",
      "SupplierID",
      "CategoryID",
      "QuantityPerUnit",
      "UnitPrice",
      "UnitsInStock",
      "UnitsOnOrder",
      "ReorderLevel",
      "Discontinued",
      "CategoryName",
    ],
    "Category": Array [
      "CategoryID",
      "CategoryName",
      "Description",
      "Picture",
    ],
    "Category_Sales_for_1997": Array [
      "CategoryName",
      "CategorySales",
    ],
    "Current_Product_List": Array [
      "ProductID",
      "ProductName",
    ],
    "Customer": Array [
      "CustomerID",
      "CompanyName",
      "ContactName",
      "ContactTitle",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
      "Phone",
      "Fax",
    ],
    "CustomerDemographic": Array [
      "CustomerTypeID",
      "CustomerDesc",
    ],
    "Customer_and_Suppliers_by_City": Array [
      "City",
      "CompanyName",
      "ContactName",
      "Relationship",
    ],
    "Employee": Array [
      "EmployeeID",
      "LastName",
      "FirstName",
      "Title",
      "TitleOfCourtesy",
      "BirthDate",
      "HireDate",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
      "HomePhone",
      "Extension",
      "Photo",
      "Notes",
      "ReportsTo",
      "PhotoPath",
    ],
    "Invoice": Array [
      "ShipName",
      "ShipAddress",
      "ShipCity",
      "ShipRegion",
      "ShipPostalCode",
      "ShipCountry",
      "CustomerID",
      "CustomerName",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
      "Salesperson",
      "OrderID",
      "OrderDate",
      "RequiredDate",
      "ShippedDate",
      "ShipperName",
      "ProductID",
      "ProductName",
      "UnitPrice",
      "Quantity",
      "Discount",
      "ExtendedPrice",
      "Freight",
    ],
    "Order": Array [
      "OrderID",
      "CustomerID",
      "EmployeeID",
      "OrderDate",
      "RequiredDate",
      "ShippedDate",
      "ShipVia",
      "Freight",
      "ShipName",
      "ShipAddress",
      "ShipCity",
      "ShipRegion",
      "ShipPostalCode",
      "ShipCountry",
    ],
    "Order_Detail": Array [
      "OrderID",
      "ProductID",
      "UnitPrice",
      "Quantity",
      "Discount",
    ],
    "Order_Details_Extended": Array [
      "OrderID",
      "ProductID",
      "ProductName",
      "UnitPrice",
      "Quantity",
      "Discount",
      "ExtendedPrice",
    ],
    "Order_Subtotal": Array [
      "OrderID",
      "Subtotal",
    ],
    "Orders_Qry": Array [
      "OrderID",
      "CustomerID",
      "EmployeeID",
      "OrderDate",
      "RequiredDate",
      "ShippedDate",
      "ShipVia",
      "Freight",
      "ShipName",
      "ShipAddress",
      "ShipCity",
      "ShipRegion",
      "ShipPostalCode",
      "ShipCountry",
      "CompanyName",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
    ],
    "Product": Array [
      "ProductID",
      "ProductName",
      "SupplierID",
      "CategoryID",
      "QuantityPerUnit",
      "UnitPrice",
      "UnitsInStock",
      "UnitsOnOrder",
      "ReorderLevel",
      "Discontinued",
    ],
    "Product_Sales_for_1997": Array [
      "CategoryName",
      "ProductName",
      "ProductSales",
    ],
    "Products_Above_Average_Price": Array [
      "ProductName",
      "UnitPrice",
    ],
    "Products_by_Category": Array [
      "CategoryName",
      "ProductName",
      "QuantityPerUnit",
      "UnitsInStock",
      "Discontinued",
    ],
    "Region": Array [
      "RegionID",
      "RegionDescription",
    ],
    "Sales_Totals_by_Amount": Array [
      "SaleAmount",
      "OrderID",
      "CompanyName",
      "ShippedDate",
    ],
    "Sales_by_Category": Array [
      "CategoryID",
      "CategoryName",
      "ProductName",
      "ProductSales",
    ],
    "Shipper": Array [
      "ShipperID",
      "CompanyName",
      "Phone",
    ],
    "Summary_of_Sales_by_Quarter": Array [
      "ShippedDate",
      "OrderID",
      "Subtotal",
    ],
    "Summary_of_Sales_by_Year": Array [
      "ShippedDate",
      "OrderID",
      "Subtotal",
    ],
    "Supplier": Array [
      "SupplierID",
      "CompanyName",
      "ContactName",
      "ContactTitle",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
      "Phone",
      "Fax",
      "HomePage",
    ],
    "Territory": Array [
      "TerritoryID",
      "TerritoryDescription",
      "RegionID",
    ],
  },
  "source": "https://services.odata.org/V2/Northwind/Northwind.svc",
}
`;

exports[`Testing functions that retrieve data from an Odata source Function that retrieves the metadata XML file for a given Odata source 1`] = `
Object {
  "associations": Object {
    "Alphabetical_list_of_product": Array [],
    "Category": Array [
      "Products",
    ],
    "Category_Sales_for_1997": Array [],
    "Current_Product_List": Array [],
    "Customer": Array [
      "Orders",
      "CustomerDemographics",
    ],
    "CustomerDemographic": Array [
      "Customers",
    ],
    "Customer_and_Suppliers_by_City": Array [],
    "Employee": Array [
      "Employees1",
      "Employee1",
      "Orders",
      "Territories",
    ],
    "Invoice": Array [],
    "Order": Array [
      "Customer",
      "Employee",
      "Order_Details",
      "Shipper",
    ],
    "Order_Detail": Array [
      "Order",
      "Product",
    ],
    "Order_Details_Extended": Array [],
    "Order_Subtotal": Array [],
    "Orders_Qry": Array [],
    "Product": Array [
      "Category",
      "Order_Details",
      "Supplier",
    ],
    "Product_Sales_for_1997": Array [],
    "Products_Above_Average_Price": Array [],
    "Products_by_Category": Array [],
    "Region": Array [
      "Territories",
    ],
    "Sales_Totals_by_Amount": Array [],
    "Sales_by_Category": Array [],
    "Shipper": Array [
      "Orders",
    ],
    "Summary_of_Sales_by_Quarter": Array [],
    "Summary_of_Sales_by_Year": Array [],
    "Supplier": Array [
      "Products",
    ],
    "Territory": Array [
      "Region",
      "Employees",
    ],
  },
  "items": Object {
    "Alphabetical_list_of_product": Array [
      "ProductID",
      "ProductName",
      "SupplierID",
      "CategoryID",
      "QuantityPerUnit",
      "UnitPrice",
      "UnitsInStock",
      "UnitsOnOrder",
      "ReorderLevel",
      "Discontinued",
      "CategoryName",
    ],
    "Category": Array [
      "CategoryID",
      "CategoryName",
      "Description",
      "Picture",
    ],
    "Category_Sales_for_1997": Array [
      "CategoryName",
      "CategorySales",
    ],
    "Current_Product_List": Array [
      "ProductID",
      "ProductName",
    ],
    "Customer": Array [
      "CustomerID",
      "CompanyName",
      "ContactName",
      "ContactTitle",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
      "Phone",
      "Fax",
    ],
    "CustomerDemographic": Array [
      "CustomerTypeID",
      "CustomerDesc",
    ],
    "Customer_and_Suppliers_by_City": Array [
      "City",
      "CompanyName",
      "ContactName",
      "Relationship",
    ],
    "Employee": Array [
      "EmployeeID",
      "LastName",
      "FirstName",
      "Title",
      "TitleOfCourtesy",
      "BirthDate",
      "HireDate",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
      "HomePhone",
      "Extension",
      "Photo",
      "Notes",
      "ReportsTo",
      "PhotoPath",
    ],
    "Invoice": Array [
      "ShipName",
      "ShipAddress",
      "ShipCity",
      "ShipRegion",
      "ShipPostalCode",
      "ShipCountry",
      "CustomerID",
      "CustomerName",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
      "Salesperson",
      "OrderID",
      "OrderDate",
      "RequiredDate",
      "ShippedDate",
      "ShipperName",
      "ProductID",
      "ProductName",
      "UnitPrice",
      "Quantity",
      "Discount",
      "ExtendedPrice",
      "Freight",
    ],
    "Order": Array [
      "OrderID",
      "CustomerID",
      "EmployeeID",
      "OrderDate",
      "RequiredDate",
      "ShippedDate",
      "ShipVia",
      "Freight",
      "ShipName",
      "ShipAddress",
      "ShipCity",
      "ShipRegion",
      "ShipPostalCode",
      "ShipCountry",
    ],
    "Order_Detail": Array [
      "OrderID",
      "ProductID",
      "UnitPrice",
      "Quantity",
      "Discount",
    ],
    "Order_Details_Extended": Array [
      "OrderID",
      "ProductID",
      "ProductName",
      "UnitPrice",
      "Quantity",
      "Discount",
      "ExtendedPrice",
    ],
    "Order_Subtotal": Array [
      "OrderID",
      "Subtotal",
    ],
    "Orders_Qry": Array [
      "OrderID",
      "CustomerID",
      "EmployeeID",
      "OrderDate",
      "RequiredDate",
      "ShippedDate",
      "ShipVia",
      "Freight",
      "ShipName",
      "ShipAddress",
      "ShipCity",
      "ShipRegion",
      "ShipPostalCode",
      "ShipCountry",
      "CompanyName",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
    ],
    "Product": Array [
      "ProductID",
      "ProductName",
      "SupplierID",
      "CategoryID",
      "QuantityPerUnit",
      "UnitPrice",
      "UnitsInStock",
      "UnitsOnOrder",
      "ReorderLevel",
      "Discontinued",
    ],
    "Product_Sales_for_1997": Array [
      "CategoryName",
      "ProductName",
      "ProductSales",
    ],
    "Products_Above_Average_Price": Array [
      "ProductName",
      "UnitPrice",
    ],
    "Products_by_Category": Array [
      "CategoryName",
      "ProductName",
      "QuantityPerUnit",
      "UnitsInStock",
      "Discontinued",
    ],
    "Region": Array [
      "RegionID",
      "RegionDescription",
    ],
    "Sales_Totals_by_Amount": Array [
      "SaleAmount",
      "OrderID",
      "CompanyName",
      "ShippedDate",
    ],
    "Sales_by_Category": Array [
      "CategoryID",
      "CategoryName",
      "ProductName",
      "ProductSales",
    ],
    "Shipper": Array [
      "ShipperID",
      "CompanyName",
      "Phone",
    ],
    "Summary_of_Sales_by_Quarter": Array [
      "ShippedDate",
      "OrderID",
      "Subtotal",
    ],
    "Summary_of_Sales_by_Year": Array [
      "ShippedDate",
      "OrderID",
      "Subtotal",
    ],
    "Supplier": Array [
      "SupplierID",
      "CompanyName",
      "ContactName",
      "ContactTitle",
      "Address",
      "City",
      "Region",
      "PostalCode",
      "Country",
      "Phone",
      "Fax",
      "HomePage",
    ],
    "Territory": Array [
      "TerritoryID",
      "TerritoryDescription",
      "RegionID",
    ],
  },
  "sets": Array [
    "Categories",
    "CustomerDemographics",
    "Customers",
    "Employees",
    "Order_Details",
    "Orders",
    "Products",
    "Regions",
    "Shippers",
    "Suppliers",
    "Territories",
    "Alphabetical_list_of_products",
    "Category_Sales_for_1997",
    "Current_Product_Lists",
    "Customer_and_Suppliers_by_Cities",
    "Invoices",
    "Order_Details_Extendeds",
    "Order_Subtotals",
    "Orders_Qries",
    "Product_Sales_for_1997",
    "Products_Above_Average_Prices",
    "Products_by_Categories",
    "Sales_by_Categories",
    "Sales_Totals_by_Amounts",
    "Summary_of_Sales_by_Quarters",
    "Summary_of_Sales_by_Years",
  ],
  "types": Object {
    "Alphabetical_list_of_product": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.Int32",
      "Edm.Int32",
      "Edm.String",
      "Edm.Decimal",
      "Edm.Int16",
      "Edm.Int16",
      "Edm.Int16",
      "Edm.Boolean",
      "Edm.String",
    ],
    "Category": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.String",
      "Edm.Binary",
    ],
    "Category_Sales_for_1997": Array [
      "Edm.String",
      "Edm.Decimal",
    ],
    "Current_Product_List": Array [
      "Edm.Int32",
      "Edm.String",
    ],
    "Customer": Array [
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
    ],
    "CustomerDemographic": Array [
      "Edm.String",
      "Edm.String",
    ],
    "Customer_and_Suppliers_by_City": Array [
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
    ],
    "Employee": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.DateTime",
      "Edm.DateTime",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.Binary",
      "Edm.String",
      "Edm.Int32",
      "Edm.String",
    ],
    "Invoice": Array [
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.Int32",
      "Edm.DateTime",
      "Edm.DateTime",
      "Edm.DateTime",
      "Edm.String",
      "Edm.Int32",
      "Edm.String",
      "Edm.Decimal",
      "Edm.Int16",
      "Edm.Single",
      "Edm.Decimal",
      "Edm.Decimal",
    ],
    "Order": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.Int32",
      "Edm.DateTime",
      "Edm.DateTime",
      "Edm.DateTime",
      "Edm.Int32",
      "Edm.Decimal",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
    ],
    "Order_Detail": Array [
      "Edm.Int32",
      "Edm.Int32",
      "Edm.Decimal",
      "Edm.Int16",
      "Edm.Single",
    ],
    "Order_Details_Extended": Array [
      "Edm.Int32",
      "Edm.Int32",
      "Edm.String",
      "Edm.Decimal",
      "Edm.Int16",
      "Edm.Single",
      "Edm.Decimal",
    ],
    "Order_Subtotal": Array [
      "Edm.Int32",
      "Edm.Decimal",
    ],
    "Orders_Qry": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.Int32",
      "Edm.DateTime",
      "Edm.DateTime",
      "Edm.DateTime",
      "Edm.Int32",
      "Edm.Decimal",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
    ],
    "Product": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.Int32",
      "Edm.Int32",
      "Edm.String",
      "Edm.Decimal",
      "Edm.Int16",
      "Edm.Int16",
      "Edm.Int16",
      "Edm.Boolean",
    ],
    "Product_Sales_for_1997": Array [
      "Edm.String",
      "Edm.String",
      "Edm.Decimal",
    ],
    "Products_Above_Average_Price": Array [
      "Edm.String",
      "Edm.Decimal",
    ],
    "Products_by_Category": Array [
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.Int16",
      "Edm.Boolean",
    ],
    "Region": Array [
      "Edm.Int32",
      "Edm.String",
    ],
    "Sales_Totals_by_Amount": Array [
      "Edm.Decimal",
      "Edm.Int32",
      "Edm.String",
      "Edm.DateTime",
    ],
    "Sales_by_Category": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.String",
      "Edm.Decimal",
    ],
    "Shipper": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.String",
    ],
    "Summary_of_Sales_by_Quarter": Array [
      "Edm.DateTime",
      "Edm.Int32",
      "Edm.Decimal",
    ],
    "Summary_of_Sales_by_Year": Array [
      "Edm.DateTime",
      "Edm.Int32",
      "Edm.Decimal",
    ],
    "Supplier": Array [
      "Edm.Int32",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
      "Edm.String",
    ],
    "Territory": Array [
      "Edm.String",
      "Edm.String",
      "Edm.Int32",
    ],
  },
}
`;
